Refactor ReadingRouter to use virtual threads and enhance tests for worker behavior